<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="@dimen/_5sdp"
    android:background="@drawable/bg_white_10"
    >

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/app_name"
        android:id="@+id/tvTitle"
        android:textAllCaps="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/_10sdp"
        android:fontFamily="@font/lexend_regular"
        android:textColor="@color/black"
        android:textSize="@dimen/_20ssp" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_7ssp"
        android:layout_marginRight="@dimen/_12sdp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:fontFamily="@font/lexend_regular"
        android:text="@string/exit_screen"
        android:textColor="@color/black"
        android:textSize="@dimen/_12ssp" />

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.Material3.Button"
        android:id="@+id/tvYes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_5sdp"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginVertical="@dimen/_10sdp"
        android:gravity="center"
        app:backgroundTint="@color/app_primary"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        app:cornerRadius="8dp"
        android:text="@string/btn_yes"
        android:textSize="@dimen/_12ssp"
        android:fontFamily="@font/lexend_regular"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvDesc"
        app:layout_constraintEnd_toStartOf="@id/tvNo"
        app:layout_constraintBottom_toBottomOf="parent"
         />

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.Material3.Button"
        android:id="@+id/tvNo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_5sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:fontFamily="@font/lexend_regular"
        app:backgroundTint="@color/red"
        android:gravity="center"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/btn_no"
        android:textColor="@color/white"
        android:textSize="@dimen/_12ssp"
        app:cornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tvYes"
        app:layout_constraintTop_toBottomOf="@id/tvDesc"
        app:layout_constraintVertical_bias="0.518" />

</androidx.constraintlayout.widget.ConstraintLayout>