<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.LoginActivity">

    <View
        android:id="@+id/ivAppIcon"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_160sdp"
        android:background="@drawable/bg_gradient_top"
        android:padding="@dimen/_35sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="@dimen/_120sdp"
        android:layout_height="@dimen/_120sdp"
        android:src="@drawable/ic_app_icon"
        android:tint="@color/white"
        app:layout_constraintTop_toTopOf="@id/ivAppIcon"
        app:layout_constraintStart_toStartOf="@id/ivAppIcon"
        app:layout_constraintEnd_toEndOf="@id/ivAppIcon"
        app:layout_constraintBottom_toBottomOf="@id/ivAppIcon"/>


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/lblLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:fontFamily="@font/lexend_medium"
        android:text="@string/btn_login"
        android:textColor="@color/black"
        android:textSize="@dimen/_18ssp"
        app:layout_constraintTop_toBottomOf="@id/ivAppIcon"
        app:layout_constraintStart_toStartOf="parent"/>


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/lblLoginDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:text="@string/sign_in_into_your_account"
        android:textColor="@color/black"
        android:fontFamily="@font/lexend_regular"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lblLogin" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/InputStyleLayout"
        android:id="@+id/tilEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:prefixTextAppearance="@style/PrefixTextAppearance"
        app:layout_constraintTop_toBottomOf="@id/lblLoginDescription"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:hint="@string/enter_email_id"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edMobileNo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lexend_regular"
            android:inputType="textEmailAddress"
            android:textSize="@dimen/_14ssp"
            android:includeFontPadding="false"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        app:cornerRadius="8dp"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:layout_marginTop="@dimen/_10sdp"
        android:fontFamily="@font/lexend_medium"
        android:includeFontPadding="false"
        app:layout_constraintTop_toBottomOf="@id/tilEmail"
        android:layout_marginHorizontal="@dimen/_12sdp"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="@dimen/_14ssp"
        android:id="@+id/btnLogin"
        android:text="@string/btn_login"/>

    <ProgressBar
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_centerInParent="true"
        android:id="@+id/pbLogin"
        android:visibility="gone"
        android:indeterminate="true"
        app:layout_constraintStart_toStartOf="@id/btnLogin"
        app:layout_constraintEnd_toEndOf="@id/btnLogin"
        app:layout_constraintTop_toTopOf="@id/btnLogin"
        app:layout_constraintBottom_toBottomOf="@id/btnLogin"
        android:indeterminateTint="@color/white"
        app:trackThickness="1dp" />


</androidx.constraintlayout.widget.ConstraintLayout>